--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@jspsych/plugin-html-keyboard-response": "^2.0.0",
     "jspsych": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
